--- a/WebReport/src/main/resources/application.yml
+++ b/WebReport/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 #Postgres persistence
 spring:
   datasource:
@@ -11,3 +10,7 @@ spring:
     show-sql: true
     hibernate:
       dialect: org.hibernate.dialect.PostgreSQLDialect
+  application:
+    name: webreport
+server:
+  port: 8001
