--- a/WebReport/src/main/resources/application.yml
+++ b/WebReport/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
     name: webreport
 server:
   port: 8001
+eureka:
+  client:
+    service-url:
+     defaultZone: http://localhost:8761/eureka 
