--- a/webReport-Oauth/src/main/resources/application.yml
+++ b/webReport-Oauth/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: Oauth
 server:
   port: 8002
+eureka:
+  client:
+    service-url:
+     defaultZone: http://localhost:8761/eureka 
